tests/typing/bad/testfile-subtype-1.scala
class C[+T] { def foo[A>:C[Nothing]](a: C[C[Boolean]]) : A = a }
object Main { def main(args: Array[String]) { } }
